// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bGaUKc hqIYOh"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ksHopp iymZHb"
      tabindex="0"
    >
      <span
        class="sc-gXRnwl gzMoSp"
      >
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ewSVzs jjODNO sc-hJhISk jvkCQO"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eicrwV fuKBJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kHxSrM vkHen"
    >
      : 
    </i>
    <span
      class="sc-lhMhQd bdOgnS"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bGaUKc hqIYOh"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ksHopp iymZHb"
      tabindex="0"
    >
      <span
        class="sc-gXRnwl gzMoSp"
      >
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ewSVzs jjODNO sc-hJhISk jvkCQO"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eicrwV fuKBJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kHxSrM vkHen"
    >
      : 
    </i>
    <span
      class="sc-lhMhQd bdOgnS"
    >
      nice game 
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie bbpOhE"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bGaUKc hqIYOh"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ksHopp iymZHb"
      tabindex="0"
    >
      <span
        class="sc-gXRnwl gzMoSp"
      >
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-bUhGxX cwFHEp"
    >
      * 
    </span>
    <span
      class="sc-ewSVzs jjODNO sc-hJhISk sc-hRMXkK jvkCQO kuBcVo"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eicrwV fuKBJP"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-lhMhQd sc-fTxQUN bdOgnS lcMpCx"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bGaUKc hqIYOh"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ksHopp iymZHb"
      tabindex="0"
    >
      <span
        class="sc-gXRnwl gzMoSp"
      >
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ewSVzs jjODNO sc-hJhISk jvkCQO"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eicrwV fuKBJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kHxSrM vkHen"
    >
      : 
    </i>
    <span
      class="sc-lhMhQd bdOgnS"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bGaUKc hqIYOh"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ksHopp iymZHb"
      tabindex="0"
    >
      <span
        class="sc-gXRnwl gzMoSp"
      >
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ewSVzs jjODNO sc-hJhISk jvkCQO"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eicrwV fuKBJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kHxSrM vkHen"
    >
      : 
    </i>
    <span
      class="sc-lhMhQd bdOgnS"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-ewSVzs jjODNO sc-cvlXHq kcDfUI"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eicrwV fuKBJP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bGaUKc hqIYOh"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ksHopp iymZHb"
      tabindex="0"
    >
      <span
        class="sc-gXRnwl gzMoSp"
      >
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ewSVzs jjODNO sc-hJhISk jvkCQO"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eicrwV fuKBJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kHxSrM vkHen"
    >
      : 
    </i>
    <span
      class="sc-lhMhQd bdOgnS"
    >
      hey
       
      <span
        class="sc-ewSVzs jjODNO sc-cvlXHq kcDfUI"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eicrwV fuKBJP"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-ewSVzs jjODNO sc-cvlXHq kcDfUI"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eicrwV fuKBJP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bGaUKc hqIYOh"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ksHopp iymZHb"
      tabindex="0"
    >
      <span
        class="sc-gXRnwl gzMoSp"
      >
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ewSVzs jjODNO sc-hJhISk jvkCQO"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eicrwV fuKBJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kHxSrM vkHen"
    >
      : 
    </i>
    <span
      class="sc-lhMhQd bdOgnS"
    >
      hey
       
      <span
        class="sc-ewSVzs jjODNO sc-cvlXHq kcDfUI"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eicrwV fuKBJP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bGaUKc hqIYOh"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ksHopp iymZHb"
      tabindex="0"
    >
      <span
        class="sc-gXRnwl gzMoSp"
      >
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ewSVzs jjODNO sc-hJhISk jvkCQO"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eicrwV fuKBJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kHxSrM vkHen"
    >
      : 
    </i>
    <span
      class="sc-lhMhQd bdOgnS"
    >
      <span
        class="sc-ewSVzs jjODNO sc-cvlXHq kcDfUI"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eicrwV fuKBJP"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bGaUKc hqIYOh"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ksHopp iymZHb"
      tabindex="0"
    >
      <span
        class="sc-gXRnwl gzMoSp"
      >
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ewSVzs jjODNO sc-hJhISk jvkCQO"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eicrwV fuKBJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kHxSrM vkHen"
    >
      : 
    </i>
    <span
      class="sc-lhMhQd bdOgnS"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-ewSVzs jjODNO sc-cvlXHq kcDfUI"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eicrwV fuKBJP"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bGaUKc kqgoZu"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ksHopp iymZHb"
      tabindex="0"
    >
      <span
        class="sc-gXRnwl gzMoSp"
      >
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ewSVzs jjODNO sc-hJhISk jvkCQO"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eicrwV fuKBJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kHxSrM vkHen"
    >
      : 
    </i>
    <span
      class="sc-lhMhQd bdOgnS"
    >
      Hey
       
      <span
        class="sc-ewSVzs jjODNO sc-cvlXHq kcDfUI"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eicrwV fuKBJP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bGaUKc hqIYOh"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ksHopp iymZHb"
      tabindex="0"
    >
      <span
        class="sc-gXRnwl gzMoSp"
      >
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ewSVzs jjODNO sc-hJhISk jvkCQO"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eicrwV fuKBJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kHxSrM vkHen"
    >
      : 
    </i>
    <span
      class="sc-lhMhQd bdOgnS"
    >
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie fyMqrn"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie fyMqrn"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie fyMqrn"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bGaUKc hqIYOh"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-ksHopp iymZHb"
      tabindex="0"
    >
      <span
        class="sc-gXRnwl gzMoSp"
      >
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kHxSrM vkHen"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ewSVzs jjODNO sc-hJhISk jvkCQO"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eicrwV fuKBJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kHxSrM vkHen"
    >
      : 
    </i>
    <span
      class="sc-lhMhQd bdOgnS"
    >
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie bbpOhE"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie bbpOhE"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie bbpOhE"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie bbpOhE"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie bbpOhE"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie bbpOhE"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie bbpOhE"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie bbpOhE"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie bbpOhE"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie bbpOhE"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-cVAnfH gGrjiE"
        tabindex="-1"
      >
        <span
          class="sc-dkqRie bbpOhE"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
